--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,9 @@ inputs:
   openai_api_key:
     description: 'OpenAI API key'
     required: true
+  jira_token:
+    description: 'The Jira token'
+    required: true
   pull_request_id:
     description: 'Pull request id (otherwise attempt to extract it from the GitHub metadata)'
     required: false
